[package]
name = "ble_esp_template"
version = "0.1.0"
authors = ["prazval-zan"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "ble_esp_template"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-hal = "0.45.2"      # GPIO, peripherals
esp32-nimble = "0.11.1"
anyhow = "1"

ws2812-esp32-rmt-driver = { version = "*", features = ["smart-leds-trait"] }
smart-leds = "*"

[build-dependencies]
embuild = "0.33"
